# CSD2

./: .gitmodules  README.md  hello.txt
CSD2a/eindopdracht/: README.md  eindopdracht1.py  eindopdracht2.py  eindopdracht3.py  eindopdracht4.py  eindopdrachtFinal.py
CSD2a/eventbased/: EBSequencer.py  EBSequencer_2.py  eventhandling.py
CSD2a/python_basics/: playsound.py  ritmischeplayback.py
CSD2a/singlesample/: sequencer.py  sequencer2.py  sequencer3.py
CSD2b/FMsynth/: FMsynth.cpp  FMsynth.h  Makefile  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  simplesynth.cpp  square.h  synth.cpp  synth.h
CSD2b/InstrumentClass/: Makefile  main.cpp  (+2 more)
CSD2c/: CMakeLists.txt
CSD2c/EindOpdracht/: CMakeLists.txt  README.md  audioeffect.h  biquad.cpp  comb.cpp  datorro.cpp  datorro.h  dualbiquad.cpp  energyDetect.h  main.cpp  onepole.cpp  waveshaper.cpp  waveshaper.h
CSD2c/Prototype/AudioChainTest/: CMakeLists.txt  allpass.cpp  allpass.h  audioeffect.h  datorro.cpp  datorro.h  dualbiquad.cpp  main.cpp  modallpass.cpp  waveshaper.cpp  waveshaper.h
CSD2c/Prototype/proto_eind_1/: CMakeLists.txt  allpass.cpp  allpass.h  audioeffect.cpp  comb.cpp  comb.h  datorro.cpp  datorro.h  dualbiquad.cpp  dualbiquad.h  energyDetect.cpp  energyDetect.h  envelope.cpp  envelope.h  filter.cpp  filter.h  fixeddelay.cpp  fixeddelay.h  generator.cpp  generator.h  highpass.cpp  highpass.h  main.cpp  modallpass.cpp  modallpass.h  onepole.cpp  onepole.h  predelay.cpp  predelay.h  waveshaper.cpp  waveshaper.h
CSD2d/: CMakeLists.txt
python_basics/: helloworld.py  playsound.py  ritmischeplayback.py
(+322 files in other folders)
